tests/compile_fail/handle_scope_lifetime_2.stderr
error[E0499]: cannot borrow `*hs1` as mutable more than once at a time
  --> $DIR/handle_scope_lifetime_2.rs:14:34
   |
11 |   let mut hs2 = v8::EscapableHandleScope::new(hs1);
   |                                               --- first mutable borrow occurs here
...
14 |   let _local2 = v8::Integer::new(hs1, 123);
   |                                  ^^^ second mutable borrow occurs here
15 |   let _local3 = v8::Integer::new(hs2, 123);
   |                                  --- first borrow later used here
